base/traefik/wazuh-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-dashboard-ingress
  namespace: default
spec:
  rules:
  - host: dashboard.mdr.plexicus.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wazuh-dashboard-service
            port:
              number: 443
  tls:
  - hosts:
    - dashboard.mdr.plexicus.com
    secretName: wazuh-dashboard-http-cert-secret
